<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.xiaoke_1256.orders</groupId>
  <artifactId>orders-common</artifactId>
  <name>orders-common</name>
  <version>1.0.0-SNAPSHOT</version>
  <properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>1.8</maven.compiler.source>  
    <maven.compiler.target>1.8</maven.compiler.target>  
	<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
  </properties>
  
  <dependencies>
     
    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.25</version>
        <scope>provided</scope>
    </dependency>
    
    <dependency>
	    <groupId>commons-lang</groupId>
	    <artifactId>commons-lang</artifactId>
	    <version>2.3</version>
	    <scope>provided</scope>
	</dependency>
	
	<dependency>
    	<groupId>junit</groupId>
    	<artifactId>junit</artifactId>
    	<version>4.12</version>
    	<scope>test</scope>
     </dependency>	
   
  </dependencies>
  
  <build>
  	<plugins>
  	    <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.20</version>
            <configuration>
       	       <skip>true</skip>    
       	       <!-- 
        		排除掉特定的测试类 -->
               <excludes>
                   <exclude>**/Es*.java</exclude>
               </excludes>
            </configuration>
        </plugin>
  	</plugins>
  </build>

</project>